tests/base/invalid/If_CompileFail_3.whiley
void f(bool z):
     if(z):
          for z in [1,2,3]:
            out<->println(str(z))
